--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
+body {
+  height: 100%;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
+  min-height: 90vh;
+  min-width: 90vw;
+  margin-top: 40px;
+}
+
+.Employees {
+  display: grid;
+  width: 400px;
+  min-height: 100px;
+  margin: auto;
+  border-radius: 1px 20px 10px;
+  background: #2abb9b;
+  padding: 20px;
   color: white;
+  box-shadow: #ddd 7px 7px;
+
+  grid-template-columns: 80% 20%;
+  grid-template-rows: 50px auto;
 }
 
-.App-link {
-  color: #61dafb;
+.InputText {
+  font-size: x-large;
+  padding: 3px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.Button {
+  background: white;
+  border: 1px solid #eee;
+  text-transform: lowercase;
+  font-weight: bold;
+  border-radius: 4px;
+  width: 50px;
+  margin: 10px auto;
+}
+
+.lds-hourglass {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-hourglass:after {
+  content: " ";
+  display: block;
+  border-radius: 50%;
+  width: 0;
+  height: 0;
+  margin: 8px;
+  box-sizing: border-box;
+  border: 32px solid #fff;
+  border-color: #fff transparent #fff transparent;
+  animation: lds-hourglass 1.2s infinite;
+}
+@keyframes lds-hourglass {
+  0% {
+    transform: rotate(0);
+    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
   }
-  to {
-    transform: rotate(360deg);
+  50% {
+    transform: rotate(900deg);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+  100% {
+    transform: rotate(1800deg);
   }
 }
